# vigilant-parakeet

cloud/docker-compose-task/: .env  pyproject.toml
cloud/docker-compose-task/docker/pgsync_docker/: Dockerfile  runserver.sh
cloud/docker-compose-task/src/: app.py  config.py
cloud/task_1/: docker-compose.yml  pyproject.toml  requirements.txt
cloud/task_1/docker/backend_docker/: Dockerfile
cloud/task_1/docker/pgsync/: Dockerfile  runserver.sh
cloud/task_1/notebooks/: Untitled.ipynb
cloud/task_1/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cloud/task_1/src/: app.py  config.py
cloud/task_1_v2/: README.md  docker-compose.yml  docker-compose_core.yml  logs.txt  pyproject.toml
cloud/task_1_v2/airbnb/: data.py  schema.py
cloud/task_1_v2/docker/pgsync_docker/: Dockerfile  runserver.sh
cloud/task_1_v2/logstash/: Dockerfile
cloud/task_1_v2/logstash/pipeline/: logstash.conf
cloud/task_1_v2/notebooks/: Pandas to SQL.ipynb  Untitled.ipynb
cloud/task_1_v2/notebooks/.ipynb_checkpoints/: Pandas to SQL-checkpoint.ipynb
cloud/task_1_v2/starcraft/: data.py  schema.py
docker-compose-task/: README.md
