[tool.poetry]
name = "task_1_v2"
version = "0.1.0"
description = ""
authors = ["Piotr Sierkin <psierkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
databases = {extras = ["postgresql"], version = "^0.5.2"}
fastapi = "^0.68.1"
elasticsearch-async = "^6.2.0"
gunicorn = "^20.1.0"
pgsync = "^2.1.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
